fix: Remove unused DTO and apply Java 21 list idioms in tests
MenteeApplicationReviewDto was left over from an earlier design
iteration and had no callers; removing it prevents confusion for
future contributors. Also replace List.get(0)/get(1) with
getFirst()/getLast() in the integration test to align with the
Java 21 style used elsewhere in the codebase.